# HTTPShell

./: Dockerfile  README.md
InstallService/: Cargo.toml
InstallService/src/: lib.rs  main.rs
ServiceBinary/: Cargo.toml
ServiceBinary/src/: main.rs
